--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="header">
-    <h1><img src="src/images/microblogging-vs-blogging.ico" alt="MicroBlog"></h1>
+    <h1><img src="images/microblogging-vs-blogging.ico" alt="MicroBlog"></h1>
 </header>
 
 <nav class="navbar navbar-expand-sm bg-primary">
@@ -33,18 +33,14 @@
                 </li>
             </ul>
         </div>
-        <div class="container-fluid">
-            <div>
-                <ul class="">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Register</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+        </ul>
     </div>
 </nav>
 
