--- a/index_template.html
+++ b/index_template.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -16,30 +16,42 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- <a class="text-decoration-none p-3" href="#">Welcome</a> -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-person-fill" viewBox="0 0 16 16">
-                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
-              </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-person-fill"
+                viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
+            </svg>
             <div class="navbar-brand">
                 <span class="navbar-text text-white">Welcome <strong>Joao Sousa</strong></span>
             </div>
+
             <!-- <a class="navbar-brand  p-3" href="#">Home</a> -->
             <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <div class="dPostBlog">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-file-plus"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M8.5 6a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V10a.5.5 0 0 0 1 0V8.5H10a.5.5 0 0 0 0-1H8.5V6z" />
+                        <path
+                            d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z" />
+                    </svg>
+                    <span class="postBlog">Post</span>
+                </div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="index_template.html">| Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="login_template.html">| Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Logout</a>
+                        <a class="nav-link" href="#">| Logout</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link" href="register_template.html">| Register</a>
                     </li>
                 </ul>
             </div>
@@ -66,12 +78,11 @@
                 <img src="imagens/test2.png" alt="imagem_css" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="imagens/test3.png" alt="imagem_javascript" class="d-block w-100">
+                <img src="imagens/code_script.jpg" alt="imagem_javascript" class="d-block w-100">
             </div>
         </div>
 
 
-        <!-- Left and right controls/icons -->
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel_principal" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
         </button>
@@ -79,6 +90,7 @@
             <span class="carousel-control-next-icon"></span>
         </button>
     </div>
+
 
     <div class="container mt-5">
         <div class="row shadow p-3 mb-5 rounded-4">
@@ -96,7 +108,6 @@
             </div>
 
 
-            <!-- Conteúdo do Post (Lado Direito) -->
             <div class="col-md-9">
                 <div class="card">
                     <div class="card-body">
@@ -107,7 +118,6 @@
                             Duis efficitur quam vel massa laoreet, nec placerat elit feugiat. Sed suscipit felis a
                             vestibulum.
                         </p>
-                        <!-- Adicione mais conteúdo do post aqui -->
                     </div>
                 </div>
             </div>
@@ -131,7 +141,6 @@
             </div>
 
 
-            <!-- Conteúdo do Post (Lado Direito) -->
             <div class="col-md-9">
                 <div class="card">
                     <div class="card-body">
@@ -142,31 +151,19 @@
                             Duis efficitur quam vel massa laoreet, nec placerat elit feugiat. Sed suscipit felis a
                             vestibulum.
                         </p>
-                        <!-- Adicione mais conteúdo do post aqui -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- <div class="mt-5 p-4 bg-dark text-white">
-        <p style="text-align: end;">Footer</p>
-    </div> -->
-
-    <!-- <footer class="footer mt-auto py-3">
-        <div class="container">
-            <!-- <span class="text-white">Place sticky footer content here.</span> --
-            <p class="ml-end text-white">&copy; 2023 IPM</p>
-
-        </div>
-    </footer> -->
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-          <p class="col-md-4 mb-0 text-body-secondary">&copy; 2023 IPM</p> 
-          <p class="text-align-end">Designed by <strong>João Sousa</strong></p>
+            <p class="col-md-4 mb-0 text-body-secondary">&copy; 2023 IPM</p>
+            <p class="text-align-end">Designed by <strong>João Sousa</strong></p>
         </footer>
-      </div>
-      
+    </div>
+
 
 
 </body>
