--- a/index_template.html
+++ b/index_template.html
@@ -91,6 +91,25 @@
         </button>
     </div>
 
+    <div class="options mt-4 container-fluid text-center">
+        <div class="form-check form-check-inline ">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
+          <label class="form-check-label" for="inlineRadio1">All</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+          <label class="form-check-label" for="inlineRadio2">Html</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+          <label class="form-check-label" for="inlineRadio3">Css</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+          <label class="form-check-label" for="inlineRadio4">Php</label>
+        </div>
+        </div>
+
 
     <div class="container mt-5">
         <div class="row shadow p-3 mb-5 rounded-4">
